Minor mods for final presentation on 5.3.

--- a/ew2021/hwprog_setup.ipynb
+++ b/ew2021/hwprog_setup.ipynb
@@ -18,7 +18,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fatal: destination path 'myhdl-synthesis' already exists and is not an empty directory.\r\n"
+      "Cloning into 'myhdl-synthesis'...\n",
+      "remote: Enumerating objects: 76, done.\u001b[K\n",
+      "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (76/76), done.\u001b[K\n",
+      "remote: Total 812 (delta 45), reused 0 (delta 0), pack-reused 736\n",
+      "Receiving objects: 100% (812/812), 1.95 MiB | 5.99 MiB/s, done.\n",
+      "Resolving deltas: 100% (572/572), done.\n"
      ]
     }
    ],
@@ -32,7 +38,9 @@
    "source": [
     "## Installing the PnR tools\n",
     "\n",
-    "This command installs the PnR tools for the Lattice ECP5 target"
+    "This command installs the PnR tools for the Lattice ECP5 target.\n",
+    "\n",
+    "**Note** These commands will not be effective inside a Binder"
    ]
   },
   {
@@ -87,10 +95,10 @@
       "Get:5 http://deb.debian.org/debian buster/main amd64 libusb-0.1-4 amd64 2:0.1.12-32 [23.4 kB]\n",
       "Get:6 http://deb.debian.org/debian buster/main amd64 libjim0.77 amd64 0.77+dfsg0-3 [116 kB]\n",
       "Get:7 http://deb.debian.org/debian buster/main amd64 openocd amd64 0.10.0-5 [2457 kB]\n",
-      "Fetched 2710 kB in 1s (3205 kB/s)  \n",
+      "Fetched 2710 kB in 1s (4777 kB/s) \n",
       "debconf: delaying package configuration, since apt-utils is not installed\n",
       "Selecting previously unselected package libusb-1.0-0:amd64.\n",
-      "(Reading database ... 37466 files and directories currently installed.)\n",
+      "(Reading database ... 37464 files and directories currently installed.)\n",
       "Preparing to unpack .../0-libusb-1.0-0_2%3a1.0.22-2_amd64.deb ...\n",
       "Unpacking libusb-1.0-0:amd64 (2:1.0.22-2) ...\n",
       "Selecting previously unselected package libftdi1-2:amd64.\n",
