--- a/ew2021/index.ipynb
+++ b/ew2021/index.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "![Presentation Embedded World 2021 DIGITAL](https://file-service.nuernbergmesse.de/cmsfile/105/41/d3fab217-0ebd-11eb-8b50-005056a097eb--data/;v11;w980.jpg) ![logo](section5.png)\n",
+    "![Presentation Embedded World 2021 DIGITAL](https://file-service.nuernbergmesse.de/cmsfile/105/41/d3fab217-0ebd-11eb-8b50-005056a097eb--data/;v11;w980.jpg) [![logo](https://section5.ch/section5.png)](https://section5.ch)\n",
     "\n",
     "# jupyosys - from Browser to Silicon (in seconds)\n",
     "\n",
@@ -29,7 +29,7 @@
     "Featuring:\n",
     "* Hardware design, (co-)simulation using Python/MyHDL\n",
     "* Integrated Waveform and RTL display\n",
-    "* MyHDL extensions\n",
+    "* `@blackbox` MyHDL extensions for hierarchy/external module support\n",
     "* Synthesis for Lattice ECP5 based platforms\n",
     "* Automated testing (`pytest`)\n"
    ]
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello (new) World\n"
+      "Hello (Embedded) World\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -117,7 +117,7 @@
        "(1, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,18 @@
     }
    },
    "source": [
-    "# General HDL work flow aspects\n",
+    "# General HDL work flow aspects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
     "\n",
     "## Paradigm changes\n",
     "\n",
@@ -148,8 +159,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -158,10 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -179,9 +192,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "hide_input": false,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -191,6 +205,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -203,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -222,12 +237,12 @@
     }
    },
    "source": [
-    "### Schematic flow"
+    "## Synthesis flow schematic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "hide_input": true,
     "scrolled": false,
@@ -370,10 +385,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb58a09bf60>"
+       "<graphviz.dot.Digraph at 0x7f876063d630>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,20 +429,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "**Let's go create hardware!**\n",
-    "\n",
-    "[ Simple combinatorial logic ](simple_logic.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -457,12 +459,12 @@
     "## Updating installation\n",
     "\n",
     "Normally, you don't need to run this as the container should contain the matching\n",
-    "installation. In case you have a customized version however, you might want to pull updates as follows:"
+    "installation. In case you have a customized version however, you might want to pull updates as follows (remove '#' before executing)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -470,12 +472,12 @@
    },
    "outputs": [],
    "source": [
-    "%cd /home/pyosys/src/myhdl/myhdl-yosys/"
+    "# %cd /home/pyosys/src/myhdl/myhdl-yosys/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -483,12 +485,12 @@
    },
    "outputs": [],
    "source": [
-    "! git pull"
+    "# ! git pull"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -496,7 +498,7 @@
    },
    "outputs": [],
    "source": [
-    "! python3 setup.py install --user 1&2> /dev/null"
+    "# ! python3 setup.py install --user 1&2> /dev/null"
    ]
   }
  ],
@@ -521,6 +523,9 @@
   },
   "livereveal": {
    "autolaunch": true
+  },
+  "rise": {
+   "transition": "none"
   }
  },
  "nbformat": 4,
