--- a/ew2021/simple_logic.ipynb
+++ b/ew2021/simple_logic.ipynb
@@ -110,14 +110,17 @@
    "source": [
     "from myhdl.conversion import yshelper\n",
     "\n",
-    "# Create top level signal instances:\n",
-    "clk = Signal(bool())\n",
-    "v, q = [ Signal(intbv()[8:]) for i in range(2) ]\n",
+    "def convert():\n",
+    "    # Create top level signal instances:\n",
+    "    clk = Signal(bool())\n",
+    "    v, q = [ Signal(intbv()[8:]) for i in range(2) ]\n",
     "\n",
-    "# Create a yosys design:\n",
-    "design = yshelper.Design(\"test\")\n",
-    "inst = test(clk, v, q)\n",
-    "inst.convert(\"yosys_module\", design, name=\"test\", trace=True)"
+    "    # Create a yosys design:\n",
+    "    design = yshelper.Design(\"test\")\n",
+    "    inst = test(clk, v, q)\n",
+    "    inst.convert(\"yosys_module\", design, name=\"test\", trace=True)\n",
+    "    return design\n",
+    "design = convert()"
    ]
   },
   {
@@ -140,6 +143,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -239,7 +243,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7fce95e699b0>"
+       "<graphviz.files.Source at 0x7f22a9547f28>"
       ]
      },
      "metadata": {},
@@ -251,6 +255,140 @@
     "from ys_aux import to_svg\n",
     "\n",
     "display(to_svg(design, \"\", 75))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "cell_style": "split"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m========================================================\u001b[0m\n",
+      "\u001b[32mCREATE Module: 'test'\u001b[0m\n",
+      "\u001b[32mAdding module with name:\u001b[0m test_1_8_8\n",
+      "CONVERT_RTL tree >>>>>> 'TEST_XOR_ASSIGN' \n",
+      "============================================================================\n",
+      "DONE instancing submodules\n"
+     ]
+    }
+   ],
+   "source": [
+    "from myhdl import *\n",
+    "\n",
+    "@block\n",
+    "def test(clk, a, b):\n",
+    "    @always_comb\n",
+    "    def xor_assign():\n",
+    "        b.next = a ^ 0xaa\n",
+    "\n",
+    "    return instances()\n",
+    "\n",
+    "design = convert()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Verifying behaviour\n",
+    "\n",
+    "We create a testbench unit that stimulates the `test` block instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "code_folding": [
+     8,
+     24
+    ]
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'block' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-a04c974151b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m@\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtestbench\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mclk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSignal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0mSignal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintbv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0xff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Create instance of unit under test:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'block' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "@block\n",
+    "def testbench():\n",
+    "    clk = Signal(bool())\n",
+    "    a, b, z = [ Signal(intbv(0xff)[8:]) for i in range(3) ]\n",
+    "    # Create instance of unit under test:\n",
+    "    uut = test(clk, a, b)\n",
+    "\n",
+    "    @instance\n",
+    "    def stimulus():\n",
+    "        VALUES = [ 0xaa, 0xab, 0x55, 0x00, 0x00 ]\n",
+    "        yield (clk.posedge)\n",
+    "        yield (clk.posedge)\n",
+    "        print(\"a  b\")\n",
+    "        for v in VALUES:\n",
+    "            yield clk.negedge\n",
+    "            a.next = v\n",
+    "            z.next = a\n",
+    "            yield clk.posedge\n",
+    "            print(z, b)\n",
+    "        yield clk.posedge\n",
+    "        raise StopSimulation\n",
+    "\n",
+    "    @always(delay(10))\n",
+    "    def clkgen():\n",
+    "        clk.next = not clk\n",
+    "      \n",
+    "    return instances()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Run the test bench\n",
+    "\n",
+    "Remove trace files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! rm -f *.vcd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb = testbench()\n",
+    "\n",
+    "tb.config_sim(backend = 'myhdl', timescale=\"1ps\", trace=True, tracebackup=False)\n",
+    "tb.run_sim()\n",
+    "tb.quit_sim() # Quit so we can run another one"
    ]
   },
   {
@@ -270,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -295,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -313,10 +451,10 @@
     {
      "data": {
       "text/plain": [
-       "<myhdl._block._Block at 0x7fce95e25d30>"
+       "<myhdl._block._Block at 0x7f22a950d9e8>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -371,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -384,7 +522,7 @@
      "text": [
       "-- File: test.vhd\r\n",
       "-- Generated by MyHDL 0.11\r\n",
-      "-- Date: Wed Jan 27 11:51:16 2021\r\n",
+      "-- Date: Wed Feb 10 09:40:03 2021\r\n",
       "library IEEE;\r\n",
       "use IEEE.std_logic_1164.all;\r\n",
       "use IEEE.numeric_std.all;\r\n",
@@ -412,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
