--- a/index.ipynb
+++ b/index.ipynb
@@ -25,6 +25,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Examples\n",
+    "\n",
+    "### Third party projects\n",
+    "\n",
+    "* [1pCPU](third_party.ipynb#1pCPU) - a minimal 8 bit CPU on one page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "### Simulation issues\n",
