Relative link to pCPU.ipynb

--- a/third_party.ipynb
+++ b/third_party.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "## Proceed to Notebook:\n",
     "\n",
-    "[1pCPU](/notebooks/work/1pCPU/pCPU.ipynb)"
+    "[1pCPU](1pCPU/pCPU.ipynb)"
    ]
   }
  ],
