--- a/ew2021/index.ipynb
+++ b/ew2021/index.ipynb
@@ -29,7 +29,7 @@
     "Featuring:\n",
     "* Hardware design, (co-)simulation using Python/MyHDL\n",
     "* Integrated Waveform and RTL display\n",
-    "* MyHDL extensions\n",
+    "* `@blackbox` MyHDL extensions for hierarchy/external module support\n",
     "* Synthesis for Lattice ECP5 based platforms\n",
     "* Automated testing (`pytest`)\n"
    ]
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello (new) World\n"
+      "Hello (Embedded) World\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -117,7 +117,7 @@
        "(1, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
