--- a/ew2021/uart_loopback_test.ipynb
+++ b/ew2021/uart_loopback_test.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Setup for verification of a UART loopback on two levels:\n",
     "\n",
-    "* [After synthesis (mapped to abstract units)](#Testing)\n",
+    "* [After translation (to RTL)](#Testing)\n",
     "* [After technology mapping](#Testing-technology-mapping)\n",
     "\n",
     "This code is also making usage of external Verilog implementations of a portable and synthesizeable Block RAM."
@@ -37,12 +37,12 @@
     "diff_ignore": [
      "outputs/0/text"
     ],
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "! rm *.vcd"
+    "! rm -f *.vcd"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "execution_count": 5,
    "metadata": {
     "hide_input": true,
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1145,7 +1145,7 @@
    ],
    "source": [
     "from ys_aux import *\n",
-    "to_svg(design, \"uart_core_1_1_1_1\", 250)"
+    "to_svg(design, \"uart_core_1_1_1_1\", 400)"
    ]
   },
   {
